--- a/nlp/admin/web/src/app/sentence-analysis/create-entity-dialog/create-entity-dialog.component.css
+++ b/nlp/admin/web/src/app/sentence-analysis/create-entity-dialog/create-entity-dialog.component.css
@@ -16,3 +16,15 @@
 .error {
   color:red;
 }
+
+.content {
+  width: 50vw;
+}
+
+.footer {
+  text-align: right;
+}
+
+.submit-button {
+  margin-left: 20px;
+}
