--- a/bot/admin/web/src/app/theme/components/header/header.component.html
+++ b/bot/admin/web/src/app/theme/components/header/header.component.html
@@ -23,14 +23,16 @@
       <img class="logo-img" src="/assets/images/logo-black.svg"/>
       Tock Studio
     </div>
-    <i class="material-icons small">wb_sunny</i>
-    <nb-toggle  [(ngModel)]="isDark" (checkedChange)="switchTheme()" status="basic"></nb-toggle>
-    <i class="material-icons small">brightness_2</i>
   </div>
 </div>
 
 <div class="header-container">
-
+  <button *ngIf="isDarkTheme()" nbButton ghost (click)="switchTheme()">
+    <nb-icon icon="sun-outline"></nb-icon>
+  </button>
+  <button *ngIf="!isDarkTheme()" nbButton ghost (click)="switchTheme()">
+    <nb-icon icon="moon-outline"></nb-icon>
+  </button>
   <nb-select status="primary"
              *ngIf="state.currentApplication"
              (selectedChange)="changeApplication($event)"
