--- a/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.html
@@ -46,7 +46,7 @@
         </nb-option-group>
         <nb-option value="tock:unknown">Unknown</nb-option>
       </nb-select>
-      <button nbButton ghost (click)="newIntent()" matTooltip="Create New Intent" size="small">
+      <button nbButton ghost (click)="newIntent()" nbTooltip="Create New Intent" size="small">
         <mat-icon>library_add</mat-icon>
       </button>
       <nb-select status="primary" placeholder="Language" [(ngModel)]="sentence.language" size="small"
@@ -132,8 +132,8 @@
     <button *ngIf="displayClose" nbButton outline status="primary" size="small" shape="semi-round" class="btn" (click)="closed.emit(null)">
       <mat-icon>keyboard_return</mat-icon>
     </button>
-    <div *ngIf="sentence.qualifier" class="lastUpdate" matTooltip="Qualifier">{{sentence.qualifier}}</div>
+    <div *ngIf="sentence.qualifier" class="lastUpdate" nbTooltip="Qualifier">{{sentence.qualifier}}</div>
     <div *ngIf="sentence.updateDate" class="lastUpdate"
-         matTooltip="Last update">{{sentence.updateDate | amLocal | amDateFormat: 'HH:mm:ss YYYY/MM/DD'}}</div>
+         nbTooltip="Last update">{{sentence.updateDate | amLocal | amDateFormat: 'HH:mm:ss YYYY/MM/DD'}}</div>
   </nb-card-footer>
 </nb-card>
