--- a/nlp/admin/web/src/app/shared-nlp/confirm-dialog/confirm-dialog.component.css
+++ b/nlp/admin/web/src/app/shared-nlp/confirm-dialog/confirm-dialog.component.css
@@ -14,11 +14,14 @@
  * limitations under the License.
  */
 
-.btn {
-  padding-left: 10px;
-  margin-right: 10px;
-}
-
 .subtitle {
   padding-bottom: 30px;
+}
+
+.footer {
+  text-align: right;
+}
+
+.submit-button {
+  margin-left: 20px;
 }
