--- a/bot/admin/web/src/app/bot/i18n/i18n-import.component.html
+++ b/bot/admin/web/src/app/bot/i18n/i18n-import.component.html
@@ -17,8 +17,10 @@
   <nb-icon icon="alert-triangle" status="danger"></nb-icon>&nbsp; Only .csv or .json files are allowed.
 </div>
 <div class="import-content">
+  <p>Only validated labels will be imported.</p>
   <span class="import-label">File:&nbsp;</span>
   <input id="file" type="file" ng2FileSelect
+         [uploader]="uploader"
          (change)="onChange($event)"
          class="file-input"
          [ngClass]="!invalidSelectedFile?'valid-import':'invalid-import'"/>
