fixes #1072 Importing CSV labels should update ID/namespace
Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/bot/admin/web/src/app/bot/i18n/i18n-import.component.html
+++ b/bot/admin/web/src/app/bot/i18n/i18n-import.component.html
@@ -17,7 +17,8 @@
   <nb-icon icon="alert-triangle" status="danger"></nb-icon>&nbsp; Only .csv or .json files are allowed.
 </div>
 <div class="import-content">
-  <p>Only validated labels will be imported.</p>
+  <p>Select a JSON or CSV (with headers) file to import labels.</p>
+  <p>Only validated labels will be imported to current namespace.</p>
   <span class="import-label">File:&nbsp;</span>
   <input id="file" type="file" ng2FileSelect
          [uploader]="uploader"
