--- a/bot/admin/web/src/app/theme/components/header/header.component.scss
+++ b/bot/admin/web/src/app/theme/components/header/header.component.scss
@@ -65,6 +65,13 @@
       }
     }
 
+    .darkmode-toggle {
+      position: relative;
+      top: 4px;
+      margin-left: 5px;
+      margin-right: 5px;
+    }
+
     .logo {
       cursor: pointer;
       padding: 0 1.25rem;
