Fix tooltip and nlp admin header

--- a/nlp/admin/web/src/app/theme/components/header/header.component.html
+++ b/nlp/admin/web/src/app/theme/components/header/header.component.html
@@ -19,10 +19,8 @@
     <a (click)="toggleSidebar()" href="#" class="sidebar-toggle">
       <nb-icon icon="menu-2-outline"></nb-icon>
     </a>
-    <img style="width: 45px;" src="/assets/images/Logo_Tock_White.svg"/>
+    <img src="/assets/images/logo-black.svg" class="logo-img"/>
     <div class="logo" (click)="goToHome()">Tock Studio</div>
-    <i class="material-icons small">wb_sunny</i>
-    <i class="material-icons small">brightness_2</i>
   </div>
 </div>
 
