--- a/nlp/admin/web/src/app/theme/styles/themes.scss
+++ b/nlp/admin/web/src/app/theme/styles/themes.scss
@@ -38,6 +38,7 @@ $nb-themes: nb-register-theme((
   slide-out-background: #f7f9fc,
   slide-out-shadow-color: 0 4px 14px 0 #8f9bb3,
   slide-out-shadow-color-rtl: 0 4px 14px 0 #8f9bb3,
+  img-revert: invert(0%),
 ), default, default);
 
 $nb-themes: nb-register-theme((
@@ -59,6 +60,7 @@ $nb-themes: nb-register-theme((
   slide-out-background: #252547,
   slide-out-shadow-color: 2px 0 3px #29157a,
   slide-out-shadow-color-rtl: -2px 0 3px #29157a,
+  img-revert: invert(0%),
 ), cosmic, cosmic);
 
 $nb-themes: nb-register-theme((
@@ -80,6 +82,7 @@ $nb-themes: nb-register-theme((
   slide-out-background: linear-gradient(270deg, #edf1f7 0%, #e4e9f2 100%),
   slide-out-shadow-color: 0 4px 14px 0 #8f9bb3,
   slide-out-shadow-color-rtl: 0 4px 14px 0 #8f9bb3,
+  img-revert: invert(0%),
 ), corporate, corporate);
 
 $nb-themes: nb-register-theme((
@@ -101,4 +104,5 @@ $nb-themes: nb-register-theme((
   slide-out-background: linear-gradient(270deg, #222b45 0%, #151a30 100%),
   slide-out-shadow-color: 0 4px 14px 0 #8f9bb3,
   slide-out-shadow-color-rtl: 0 4px 14px 0 #8f9bb3,
+  img-revert: invert(100%),
 ), dark, dark);
