--- a/bot/admin/web/src/app/bot/story-builder/bot-bubble/bot-bubble.component.html
+++ b/bot/admin/web/src/app/bot/story-builder/bot-bubble/bot-bubble.component.html
@@ -1,3 +1,30 @@
 <div class="bot-content">
-  <p>Bot content</p>
+  <div class="bot-bubble">
+    <span class="text">Some bot text</span>
+    <div class="edit-button">
+      <button nbButton>
+        <nb-icon icon="edit-2"></nb-icon>
+      </button>
+    </div>
+  </div>
+</div>
+<div class="bubble-footer">
+  <span class="actions">
+    <span class="flex-start">
+      <button nbButton class="action-button">
+        <nb-icon icon="flash"></nb-icon>
+        Oui
+      </button>
+      <button nbButton class="action-button">
+        <nb-icon icon="flash"></nb-icon>
+        Non
+      </button>
+    </span>
+    <span class="flex-end">
+      <button nbButton class="action-button">
+        <nb-icon icon="flash"></nb-icon>
+        Add Action
+      </button>
+    </span>
+  </span>
 </div>
