--- a/bot/admin/web/src/app/bot/story-builder/user-bubble/user-bubble.component.html
+++ b/bot/admin/web/src/app/bot/story-builder/user-bubble/user-bubble.component.html
@@ -1,3 +1,20 @@
 <div class="user-content">
-  <p>User content</p>
+  <div class="user-bubble">
+    <span class="text">Some user text</span>
+    <div class="second-container">
+      <div class="intent-combo">
+        <nb-select placeholder="Select intent" [(selected)]="selectedIntent" >
+          <nb-option value="">New</nb-option>
+          <nb-option value="0">Option 0</nb-option>
+          <nb-option value="1">Option 1</nb-option>
+          <nb-option value="2">Option 2</nb-option>
+          <nb-option value="3">Option 3</nb-option>
+          <nb-option value="4">Option 4</nb-option>
+        </nb-select>
+      </div>
+      <div class="edit-button">
+        <button nbButton><nb-icon icon="edit-2"></nb-icon></button>
+      </div>
+    </div>
+  </div>
 </div>
