resolves #1004 [Tock Studio] added plus buttons

--- a/bot/admin/web/src/app/bot/story-builder/add-bubble-button/add-bubble-button.component.css
+++ b/bot/admin/web/src/app/bot/story-builder/add-bubble-button/add-bubble-button.component.css
@@ -14,27 +14,10 @@
  * limitations under the License.
  */
 
+.align-center{
+  width: 100%;
+}
 
-import {Component, OnInit} from '@angular/core';
-
-@Component({
-  selector: 'tock-story-builder',
-  templateUrl: './story-builder.component.html',
-  styleUrls: ['./story-builder.component.css']
-})
-export class StoryBuilderComponent implements OnInit {
-  ngOnInit(): void {
-  }
-
-  addUserSentence = () => {
-    console.log('User sentence');
-  }
-
-  addUserAction = () => {
-    console.log('Add user action');
-  }
-
-  addBotResponse = () => {
-    console.log('Add bot response');
-  }
+.button-container {
+  width: 100%;
 }
