--- a/bot/admin/web/src/app/bot/story-builder/bot-bubble/bot-bubble.component.html
+++ b/bot/admin/web/src/app/bot/story-builder/bot-bubble/bot-bubble.component.html
@@ -1,4 +1,5 @@
 <div class="bot-content">
+  <div class="avatar-bot"></div>
   <div class="bot-bubble">
     <span class="text">Some bot text</span>
     <div class="edit-button">
