--- a/bot/admin/web/src/app/bot/story-builder/user-bubble/user-bubble.component.html
+++ b/bot/admin/web/src/app/bot/story-builder/user-bubble/user-bubble.component.html
@@ -1,4 +1,5 @@
 <div class="user-content">
+
   <div class="user-bubble">
     <span class="text">Some user text</span>
     <div class="second-container">
@@ -17,4 +18,5 @@
       </div>
     </div>
   </div>
+  <div class="avatar-user"></div>
 </div>
