--- a/bot/admin/web/src/app/bot/story-builder/bot-bubble/bot-bubble.component.html
+++ b/bot/admin/web/src/app/bot/story-builder/bot-bubble/bot-bubble.component.html
@@ -1,24 +1,22 @@
 <div class="bot-content">
-  <div class="avatar-bot"></div>
   <div class="bot-bubble">
-    <span class="text">Some bot text</span>
-    <div class="edit-button">
-      <button nbButton>
-        <nb-icon icon="edit-2"></nb-icon>
-      </button>
+    <div class="avatar-bot"></div>
+    <div class="bot-bubble-content">
+      <span class="text">{{label}}</span>
+      <div class="edit-button">
+        <button nbButton>
+          <nb-icon icon="edit-2"></nb-icon>
+        </button>
+      </div>
     </div>
   </div>
 </div>
 <div class="bubble-footer">
   <span class="actions">
     <span class="flex-start">
-      <button nbButton class="action-button">
+      <button *ngFor="let action of actions" nbButton class="action-button" [status]="action === 'Oui'?'primary':'default'">
         <nb-icon icon="flash"></nb-icon>
-        Oui
-      </button>
-      <button nbButton class="action-button">
-        <nb-icon icon="flash"></nb-icon>
-        Non
+        {{action}}
       </button>
     </span>
     <span class="flex-end">
