--- a/bot/admin/web/src/app/bot/story-builder/story-builder.component.html
+++ b/bot/admin/web/src/app/bot/story-builder/story-builder.component.html
@@ -4,27 +4,35 @@
   </nb-card-header>
   <nb-card-body>
     <div class="bot-user-content">
-      <tock-user-bubble></tock-user-bubble>
-      <tock-bot-bubble></tock-bot-bubble>
-      <div class="add-bubble-buttons-container">
-        <tock-add-bubble-button class="add-bubble-button" [action]="addBotResponse"></tock-add-bubble-button>
-        <tock-add-bubble-button class="add-bubble-button" [action]="addUserAction"></tock-add-bubble-button>
-      </div>
-      <tock-user-bubble></tock-user-bubble>
-      <tock-bot-bubble></tock-bot-bubble>
-      <div class="add-bubble-buttons-container">
-        <tock-add-bubble-button class="add-bubble-button" [action]="addBotResponse"></tock-add-bubble-button>
-        <tock-add-bubble-button class="add-bubble-button" [action]="addUserAction"></tock-add-bubble-button>
+      <div *ngFor="let interaction of currentPath">
+        <tock-user-bubble [label]="interaction.label"
+                          [intent]="interaction.intent"
+                          [intents]="['selfcare_notrain_found','yes','no']">
+        </tock-user-bubble>
+        <tock-bot-bubble [label]="interaction.getLabel()"
+                         [actions]="interaction.getActions()">
+        </tock-bot-bubble>
+        <div class="add-bubble-buttons-container">
+          <tock-add-bubble-button class="add-bubble-button" [action]="addBotResponse"></tock-add-bubble-button>
+          <tock-add-bubble-button class="add-bubble-button" [action]="addUserAction"></tock-add-bubble-button>
+        </div>
       </div>
     </div>
 
   </nb-card-body>
-  <nb-card-footer>
-    <nb-form-field class="user-sentence-input-container">
-      <input type="text" nbInput fullWidth shape="round" placeholder="Enter user sentence...">
-      <button nbSuffix nbButton ghost (click)="addUserSentence()">
-        <nb-icon icon="arrow-right"></nb-icon>
+  <nb-card-footer class="story-builder-footer">
+    <div class="user-sentence">
+      <nb-form-field class="user-sentence-input-container">
+        <input type="text" nbInput fullWidth shape="round" placeholder="Enter user sentence...">
+        <button nbSuffix nbButton ghost (click)="addUserSentence()">
+          <nb-icon icon="arrow-right"></nb-icon>
+        </button>
+      </nb-form-field>
+    </div>
+    <div class="story-builder-actions">
+      <button nbSuffix nbButton status="primary" (click)="save()">
+        <nb-icon icon="save"></nb-icon> Save
       </button>
-    </nb-form-field>
+    </div>
   </nb-card-footer>
 </nb-card>
